# svn_tag_validator

./: Cargo.toml  list.txt  test.txt
src/: main.rs
