[package]
name = "svn_tag_validator"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
async-std = { version = "1.10.0", features = ["attributes"] }
env_logger = "0.9.0"
log = "0.4.14"
#svn-cmd = { git = "https://github.com/rajputrajat/svn-cmd.git" }
svn-cmd = {path = "C:/Users/rajput/R/learn/rust/svn-cmd"}
